refactor : sonarQube Critical modify
불필요한 import 제거, 중복 코드 함수화, Exception 코드 개선했습니다.